Optimisations when started from sbt